# Multi-module-data-acquisition-and-analysis-system-based-on-Python-C-and-Java

./: CMakeLists.txt  README.md  api_key.example.txt  launcher.py  main.py
CSVWeatherData/: weather_data_20250313_081207.csv  weather_data_20250313_200237.csv  weather_data_20250314_080103.csv  weather_data_20250317_200000.csv  weather_data_20250318_080332.csv  weather_data_20250318_195934.csv  weather_data_20250319_081748.csv  weather_data_20250319_195938.csv  weather_data_20250320_082133.csv  weather_data_20250320_195927.csv  weather_data_20250321_081122.csv  weather_data_20250321_201910.csv  weather_data_20250324_085146.csv  weather_data_20250324_201238.csv  weather_data_20250326_080833.csv  weather_data_20250326_195928.csv  weather_data_20250327_081226.csv  weather_data_20250327_195833.csv  weather_data_20250328_080631.csv  weather_data_20250328_195958.csv  weather_data_20250331_085158.csv  weather_data_20250331_200049.csv  weather_data_20250401_080156.csv  weather_data_20250401_195940.csv  weather_data_20250403_081604.csv  weather_data_20250403_195936.csv  weather_data_20250404_083110.csv  weather_data_20250404_200237.csv  weather_data_20250407_080649.csv  weather_data_20250407_200043.csv  weather_data_20250408_081242.csv  weather_data_20250408_200027.csv  weather_data_20250409_194730.csv  weather_data_20250410_081124.csv  weather_data_20250410_195929.csv  weather_data_20250411_091138.csv  weather_data_20251130_111011.csv  weather_data_20251130_111016.csv  weather_data_20251130_111020.csv  weather_data_20251130_111024.csv  (+172 more)
cpp/: eurostat.cpp  eurostat.h  main.cpp
(+3 files in other folders)
